Fixed button float

--- a/example-bulk-store/style.css
+++ b/example-bulk-store/style.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Poppins', sans-serif !important;
 }
 
+
 h1, h2, h5, p {
   color: #233F5D;
   font-size: 61px;
@@ -114,6 +115,10 @@ form {
   margin-bottom: 16px;
 }
 
+.form-button {
+  float: right;
+}
+
 /* Let's make our cards responsive! */
 
 /* // Small devices (landscape phones, 576px and up) */
@@ -135,9 +140,4 @@ form {
   .grid-cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
-}
-
-/* // Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-
 }
