Revert "Fixed button float"
This reverts commit 002e6edb77c26dc4e7a43e58ddf8d8baff18d9db.

--- a/example-bulk-store/style.css
+++ b/example-bulk-store/style.css
@@ -2,7 +2,6 @@ body {
   font-family: 'Poppins', sans-serif !important;
 }
 
-
 h1, h2, h5, p {
   color: #233F5D;
   font-size: 61px;
@@ -115,10 +114,6 @@ form {
   margin-bottom: 16px;
 }
 
-.form-button {
-  float: right;
-}
-
 /* Let's make our cards responsive! */
 
 /* // Small devices (landscape phones, 576px and up) */
@@ -140,4 +135,9 @@ form {
   .grid-cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+
 }
